--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-cache": "^0.4.5",
+    "gulp-clean": "^0.3.2",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
