--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
-    "express-handlebars": "^3.0.0",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0"
   }
 }
